# ALEditor

./: .PackageInfo  ALEditor.cpp  CMakeLists.txt  README.md  ale-0.9.recipe  makePackage.sh  makefile
example/: CMakeLists.txt  LayoutArchive.cpp  LoadLayoutArchive  LoadLayoutArchive.cpp  Readme  makefile  makefile_haiku  test.layout
headers/charlemagne/: CInterface.h  PArgs.h  PData.h  PMethod.h  PObject.h  PObjectBroker.h  PProperty.h  PValue.h
headers/components/: PointerRef.h  UIComponents.h
headers/customization/: Actions.h  ArrayContainer.h  CustomTypes.h  Customizable.h  CustomizableEditView.h  CustomizableNodeFactory.h  CustomizableRoster.h  CustomizableRosterView.h  CustomizableView.h  Mangle.h  Object.h  TrashView.h
headers/editor/: ALMEditor.h  LayoutArchive.h  Misc.h  PreviewWindow.h
headers/haiku_private/: Referenceable.h  WeakReferenceable.h
package/: .PackageInfo
res/: ALEditor.rdef  icon
src/charlemagne/: CInterface.cpp  PArgs.cpp  PData.cpp  PMethod.cpp  PObject.cpp  PObjectBroker.cpp  PProperty.cpp  PValue.cpp
src/components/: CustomTypes.cpp  IconData.h  UIComponents.cpp
src/customization/: Actions.cpp  Customizable.cpp  CustomizableEditView.cpp  CustomizableNodeFactory.cpp  CustomizableRoster.cpp  CustomizableRosterView.cpp  CustomizableView.cpp  Mangle.cpp  Object.cpp  TrashView.cpp
src/editor/: ALMEditor.cpp  AreaRemoval.cpp  AreaRemoval.h  EditAction.cpp  EditAction.h  EditActionAreaDragging.cpp  EditActionAreaDragging.h  EditActionInserting.h  EditActionMisc.h  EditActionMoving.h  EditActionResizing.cpp  EditActionResizing.h  EditActionSwapping.h  EditAnimation.cpp  EditAnimation.h  EditorWindow.cpp  EditorWindow.h  GroupDetection.h  InfoSystem.cpp  InfoSystem.h  LayoutArchive.cpp  LayoutEditView.cpp  LayoutEditView.h  NeutralItemManager.h  OverlapManager.cpp  OverlapManager.h
